--- a/package.json
+++ b/package.json
@@ -39,6 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://ryan10145.github.io/latex-matrix-generator",
-
+  "homepage": "http://ryan10145.github.io/latex-matrix-generator"
 }
