Fix Formatting on Smaller Screen Sizes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "latex-matrix-generatorr",
+  "name": "latex-matrix-generator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
